DuPont DevSB/src/objects/sma__MASavedQry__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sma__ActivityFilter__c</fullName>
        <label>Activity Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__AdvancedOptions__c</fullName>
        <label>Advanced Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__BaseObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Object</label>
        <referenceTo>sma__MABaseObject__c</referenceTo>
        <relationshipName>Saved_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__CacheInterval__c</fullName>
        <label>Cache Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__ColorAssignmentType__c</fullName>
        <label>Color Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                </value>
                <value>
                    <fullName>Dynamic, Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__ColorAssignment__c</fullName>
        <label>Color Assignment</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__ColorsAssignedDynamically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Colors Assigned Dynamically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__CustomQuery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sma__FilterLogic__c</fullName>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>sma__MAFolder__c</referenceTo>
        <relationshipLabel>MapAnything Saved Queries</relationshipLabel>
        <relationshipName>MapAnything_Saved_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__IconColor__c</fullName>
        <label>Icon Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__LastCacheDate__c</fullName>
        <label>Last Cache Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sma__MaxQuerySize__c</fullName>
        <label>Max Query Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__NumCaches__c</fullName>
        <label># Caches</label>
        <summaryFilterItems>
            <field>sma__MACache__c.sma__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>sma__MACache__c.sma__SavedQuery__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sma__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__OrgWide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organization Wide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__OwnerFilterId__c</fullName>
        <label>OwnerFilterId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__PicklistField__c</fullName>
        <label>Picklist Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__ProximityOptions__c</fullName>
        <label>Proximity Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__QueryComponents__c</fullName>
        <label>Query Components</label>
        <summaryForeignKey>sma__MASavedQryComponent__c.sma__MASavedQry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sma__QueryKey__c</fullName>
        <label>Query Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Query__c</fullName>
        <label>Query</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__RefreshInterval__c</fullName>
        <label>Refresh Interval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RelatedListCount__c</fullName>
        <label>Related List Count</label>
        <summaryForeignKey>sma__MARelatedList__c.sma__SavedQuery__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sma__RoleId__c</fullName>
        <label>RoleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RowLimit__c</fullName>
        <defaultValue>250000</defaultValue>
        <label>Row Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__RowOrderDirection__c</fullName>
        <label>Row Order Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__RowOrder__c</fullName>
        <label>Row Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__ShapeAssignment__c</fullName>
        <label>ShapeAssignment</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__ShapeField__c</fullName>
        <label>Shape Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Tooltip1__c</fullName>
        <label>Tooltip One</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Tooltip2__c</fullName>
        <label>Tooltip Two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__Tooltip3__c</fullName>
        <label>Tooltip Three</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Saved_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Saved Query</label>
    <listViews>
        <fullName>sma__All</fullName>
        <columns>NAME</columns>
        <columns>sma__PicklistField__c</columns>
        <columns>sma__OrgWide__c</columns>
        <columns>sma__BaseObject__c</columns>
        <columns>sma__Tooltip8__c</columns>
        <columns>sma__Tooltip5__c</columns>
        <columns>sma__Tooltip4__c</columns>
        <columns>sma__Tooltip1__c</columns>
        <columns>sma__Tooltip7__c</columns>
        <columns>sma__Tooltip6__c</columns>
        <columns>sma__Tooltip3__c</columns>
        <columns>sma__Tooltip2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sma__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Saved Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>